Updated databases settings

--- a/config/databases.yml
+++ b/config/databases.yml
@@ -9,6 +9,14 @@ dev:
       username: root
       password: 
 
+test:
+  doctrine:
+    class: sfDoctrineDatabase
+    param:
+      dsn:      mysql:host=localhost;dbname=lat
+      username: lat
+      password: shieGhoghthunnayryactUgyu
+
 all:
   doctrine:
     class: sfDoctrineDatabase
