Big changes in Bio and Contact pages / cleaned up for meeting

--- a/apps/backend/modules/story/config/generator.yml
+++ b/apps/backend/modules/story/config/generator.yml
@@ -14,8 +14,11 @@ generator:
     config:
       actions: ~
       fields:  ~
-      list:    ~
-      filter:  ~
+      list:
+        title: Carnets d'expéditions et photographies
+        display: [=title]
+      filter:
+        class: false
       form:    ~
       edit:    ~
       new:     ~
